fixing sizes and padding on mobile styles

--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,12 @@ body {
     display: flex;
     flex-direction: column;
     color: var(--neutral-light-grey);
+    box-sizing: border-box;
 }
 
 .section__title {
     color: var(--primary-cyan);
+    font-size: 1.3rem;
 }
 
 .section__paragraph {
@@ -53,11 +55,12 @@ body {
 }
 
 .section__paragraph-us {
-    font-size: .92rem;
+    margin-top: 15px;
+    font-size: .9rem;
     font-weight: normal;
-    line-height: 1.5;
+    line-height: 1.4;
     padding-right: 3.6rem;
-    opacity: .8;
+    opacity: .85;
 }
 
 .section__small {
@@ -78,21 +81,24 @@ body {
     border-radius: 5px;
     text-align: center;
     text-decoration: none;
-    color: var(--neutral-light-grey);
+    color: #fff;
+    font-weight: 700;
     background-color: var(--primary-bright-yellow);
     box-shadow: 0px 10px 25px -9px #217C79;
 
 }
 
-.section--green {
-    background: var(--primary-cyan);
-}.section--green-light {
-    background: #4abebd;
+.section--white {
+    padding: 30px 20px 30px;
 }
 
-.section--padding {
-    box-sizing: border-box;
-    padding: 25px 20px;   
+.section--green {
+    background: var(--primary-cyan);
+    padding: 25px;
+}.section--light-green {
+    background: #4abebd;
+    padding: 25px;
+    padding-bottom: 20px;
 }
 
 .section__paragraph--yellow {
@@ -113,8 +119,8 @@ body {
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
 }
 
 @media (min-width: 800px) {
@@ -124,14 +130,13 @@ body {
     }
 
     .grid {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto;
     }
 
-    .section--padding {
-        /* box-sizing: border-box; */
-        padding: 30px 30px 20px 30px;   
-    }
+    /* .section--padding {
+        padding: 40px 30px 40px 30px;   
+    } */
 
     .section__paragraph--grey {
         margin-top: 10px;
